Remove Buy/Seller order, Add Date/time, Price in Trade History of asset

--- a/app/views/trades/index.html.haml
+++ b/app/views/trades/index.html.haml
@@ -7,19 +7,16 @@
       %table.table
         %tr
           %th Trade id
-          %th Buy Order
+          %th Date / Time
           %th Trade Amount (Base)
           %th Trade Amount (Quote)
-          %th Sell Order
+          %th Price
         - @trades.each do |trade|
           - cache trade, expires_in: 1.minute do
             %tr
               %td= trade.id
               %td
-                = simple_format(h trade.buy_order_)
-                = trade.buy_order_percentage
-                = '% Filled'
-                = trade.buy_order_status
+                = trade.created_at
               %td
                 = trade.transaction_base
                 = trade.base_asset_name
@@ -27,7 +24,6 @@
                 = trade.transaction_base * trade.transaction_price
                 = trade.quote_asset_name
               %td
-                = simple_format(h trade.sell_order_)
-                = trade.sell_order_percentage
-                = trade.sell_order_status
+                = trade.price
+                = trade.quote_asset_name
       = paginate @trades, theme: 'twitter-bootstrap-4'
