--- a/app/views/brandings/edit.html.haml
+++ b/app/views/brandings/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing branding
-
-= render 'form'
-
-= link_to 'Show', @branding
-\|
-= link_to 'Back', brandings_path
+.container
+  .card
+    .card-header Editing branding
+    .card-body
+      = render 'form'
+      = link_to 'Show', @branding
+      \|
+      = link_to 'Back', brandings_path
