--- a/app/views/brandings/new.html.haml
+++ b/app/views/brandings/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New branding
-
-= render 'form'
-
-= link_to 'Back', brandings_path
+.container
+.container
+  .card
+    .card-header New branding
+    .card-body
+      = render 'form'
+      = link_to 'Back', brandings_path
