--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -5,19 +5,13 @@
       %table.table
         %tr
           %td Company name
-          %td NewArt Technology Co., Ltd.
+          %td Shitcoin Japan
         %tr
           %td= t '.address'
           %td
             〒102-0084
-            %br>/
-            千代田区二番町3-10-3#{t '.f'}
-            %br/
+            %br
+            東京都千代田区二番町3-10-3#{t '.f'}
+            %br
             %a{:href => "https://www.google.com/maps/search/〒102-0084+千代田区二番町3-10", :target => "_blank"}= t '.google_maps'
-        %tr
-          %td= t '.phone'
-          %td +81 (0)3-6825-6305<br>Mo-Fr 10:00 - 19:00 JST
-        %tr
-          %td= t '.fax'
-          %td +81 (0)3-6261-0389
         
