--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,7 +1,7 @@
 %section.top
   .container.py-3.pt-md-5.pb-md-4.mx-auto
-    %h1.display-4.text-center Top assets
-    %p.text-center.lead= t '.24hvolume', amount: Trade.volume(current_quote_asset, 24.hours).to_s + ' ' + current_quote_asset.symbol
+    %h1.display-4.text-center Top Shitcoins
+    -# %p.text-center.lead= t '.24hvolume', amount: Trade.volume(current_quote_asset, 24.hours).to_s + ' ' + current_quote_asset.symbol
     .card
       .card-body
         %table.table
