--- a/app/views/user_mailer/airdrop.text.haml
+++ b/app/views/user_mailer/airdrop.text.haml
@@ -20,5 +20,5 @@ Please let us know if you think you received this email in error.
 
 Regards,
 
-NewArt Technology Co., Ltd.
-https://www.newart.tech
+Shitcoin Japan Co., Ltd.
+https://www.shitcoin.jp
