--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -1,11 +1,8 @@
 .container
-  %h1.mt-5= t '.contact_1'
+  %h1.mt-5 Shitcoin, Inc
   .card
     .card-body
       %table.table
-        %tr
-          %td Company name
-          %td Shitcoin Japan
         %tr
           %td= t '.address'
           %td
