--- a/app/views/assets/edit.html.haml
+++ b/app/views/assets/edit.html.haml
@@ -1,14 +1,18 @@
-.container
+.container.mt-3
   %h1 Edit #{@asset.name}
 
   = form_for @asset, authenticity_token: true do |f|
     .form-group
       = f.label :description
       = f.text_area :description, class: 'form-control'
-      %small.form-text.text-muted Please provide some further information, eg. tokenholder benefits
     .form-group
-      = f.label :website
-      = f.text_field :website, class: 'form-control'
+      .row
+        .col-md-6
+          = f.label :website
+          = f.text_field :website, class: 'form-control'
+        .col-md-6
+          = f.label :domain
+          = f.text_field :domain, class: 'form-control'
     .form-group
       .row
         .col-md-4
@@ -26,7 +30,6 @@
           .custom-file
             = f.file_field :whitepaper_en, class: 'custom-file-input', id: "whitepaper", direct_upload: true
             = f.label :whitepaper_en, "Choose", class: 'custom-file-label', for: "whitepaper"
-
     .form-group.page_content
       = f.label :page_content
       = text_area_tag 'asset[page_content][][html]', @asset.page_content.try(:[], 0).try(:[], 'html'), id: 'redactor', class: 'redactor'
