--- a/app/views/pages/token_studio.html.haml
+++ b/app/views/pages/token_studio.html.haml
@@ -5,7 +5,7 @@
   .card.mb-3
     .card-body
       %h5.card-title Step 1: Create Contract
-      %p Do you prefer consultation or a custom solution? #{ link_to 'Contact us now', page_url('contact') }.
+      -# %p Do you prefer consultation or a custom solution? #{ link_to 'Contact us now', page_url('contact') }.
       %form{action: contract_assets_path}
         .row.form-group
           %label.col-sm-2.col-form-label Name
