add investor notice

--- a/app/views/authorization_codes/_form.html.haml
+++ b/app/views/authorization_codes/_form.html.haml
@@ -10,5 +10,4 @@
     .col-sm-4
       = form.email_field :email, :placeholder =>:email, :required => true, class: "form-control", type: "email"
     .col-sm-3
-      = form.submit "Send me the link", class: "btn btn-primary"
-%br/
+      = form.submit "Get the link", class: "btn btn-primary"
