--- a/app/views/authorization_codes/new.html.haml
+++ b/app/views/authorization_codes/new.html.haml
@@ -1,6 +1,6 @@
 .container
-  %h1.mt-5= t '.please_enter'
-  %p= t '.we_will_send'
+  %h1.mt-5 Awesomeness awaits
   .card
     .card-body
       = render 'form', authorization_code: @authorization_code
+      %p We will send you a secret link. By requesting an email, you agree to never invest more than you can afford to lose.
