--- a/app/views/pages/token_studio.html.haml
+++ b/app/views/pages/token_studio.html.haml
@@ -1,7 +1,8 @@
 
 
 .container#tokenstudio
-  %h1.mt-5.mb-3 Token Studio
+  %h1.mt-5.mb-3 ICO Maker
+  %p Create your own ERC20 contract for free.
   .card.mb-3
     .card-body
       %h5.card-title Step 1: Create Contract
