--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,6 +1,6 @@
 %section.top
   .container.py-3.pt-md-5.pb-md-4.mx-auto
-    %h1.display-4.text-center Shitcoin Studio
+    %h1.display-4.text-center Shitcoins Japan
     %p.mt-3.text-center The <strike>most idiotic</strike> easiest way to join the crypto world
     %p.mt-3.text-center #{ link_to t('.create_token'), '/pages/token_studio', class: 'btn btn-lg btn-outline-primary' } or #{ link_to t('.submit_existing'), new_asset_path }
 %section.featured
