update some text

--- a/app/views/authorization_codes/new.html.haml
+++ b/app/views/authorization_codes/new.html.haml
@@ -4,7 +4,7 @@
     .card-body
       %p We will send you a secret link. 
       = render 'form', authorization_code: @authorization_code
-      %p By requesting an email, you agree to the following terms:
+      %p By requesting a secret link, you agree to the following terms:
       %ul
         %li You will never invest more than you can afford to lose.
         %li You acknowledge that this website is still in development and will change over time.
