change some text

--- a/app/views/authorization_codes/new.html.haml
+++ b/app/views/authorization_codes/new.html.haml
@@ -2,11 +2,10 @@
   %h1.mt-5 Awesomeness awaits
   .card
     .card-body
-      %p We will send you a secret link. 
+      %p Please request a secret link to your dashboard 
       = render 'form', authorization_code: @authorization_code
-      %p By requesting a secret link, you agree to the following terms:
+      %p By requesting a secret link, you agree to
       %ul
-        %li You will never invest more than you can afford to lose.
-        %li You acknowledge that this website is still in development and will change over time.
-        %li You do not hold the operators liable for any hacks or loss of funds.
-        %li If you find a security hole, please contact security@shitcoins.jp and give us some time to fix it. You shall be rewarded.
+        %li never invest more than you can afford to lose.
+        %li not hold the operators liable for any loss of funds due to bugs or hacks.
+        %li report bugs and issues to maybewecanbehappytogether@shitcoins.jp
