--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,7 +1,9 @@
 %section.top
   .container.py-3.pt-md-5.pb-md-4.mx-auto
-    %h1.display-4.text-center Shitcoins Japan
-    %p.mt-3.text-center The easiest way to join the Crypto-Shitshow
+    %h1.display-4.text-center Shitcoins
+    %p.mt-3.text-center Shitcoins is an <a href="https://github.com/buhrmi/shitcoins">open source</a> ICO and trading platform
+    %p.mt-3.text-center It is the easiest way to join the Crypto-Shitshow
+    %p.mt-3.text-center It's still in development and full of bugs, but feel free to try it out.
     %p.mt-3.text-center #{ link_to t('.create_token'), '/pages/token_studio', class: 'btn btn-lg btn-outline-primary' } or #{ link_to t('.submit_existing'), new_asset_path }
 %section.featured
   .container.py-3.pt-md-5.pb-md-4.mx-auto
