change some text

--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,6 +1,6 @@
 %section.top
   .container.py-3.pt-md-5.pb-md-4.mx-auto
-    %h1.display-4.text-center Shitcoins
+    %h1.display-4.text-center Welcome to Shitcoins
     %p.mt-3.text-center Shitcoins is an <a href="https://github.com/buhrmi/shitcoins">open source</a> ICO and trading platform
     %p.mt-3.text-center It is the easiest way to join the Crypto-Shitshow
     %p.mt-3.text-center It's still in development and full of bugs, but feel free to try it out.
